--- a/range-firework/index.html
+++ b/range-firework/index.html
@@ -10,11 +10,21 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
-    <link rel="apple-touch-icon-precomposed" href="./favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./range-firework/favicon.png"
+    />
+    <link rel="icon" type="image/png" href="./range-firework/favicon.png" />
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="./range-firework/favicon.png"
+    />
     <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="msapplication-TileImage" content="./favicon.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="./range-firework/favicon.png"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Russo+One"
       rel="stylesheet"
@@ -186,6 +196,7 @@
     <script src="./range-firework/js/Stage.js"></script>
     <script src="./range-firework/js/MyMath.js"></script>
     <script src="./range-firework/js/script.js"></script>
-    <!-- <script src="./js/range-firework/main.js"></script> -->
+    <script src="./range-firework/js/heart.js"></script>
+    <script src="./range-firework/js/main.js"></script>
   </body>
 </html>
