--- a/range-firework/index.html
+++ b/range-firework/index.html
@@ -13,17 +13,17 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="./range-firework/favicon.png"
+      href="./favicon.png"
     />
-    <link rel="icon" type="image/png" href="./range-firework/favicon.png" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
     <link
       rel="apple-touch-icon-precomposed"
-      href="./range-firework/favicon.png"
+      href="./favicon.png"
     />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta
       name="msapplication-TileImage"
-      content="./range-firework/favicon.png"
+      content="./favicon.png"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Russo+One"
@@ -33,7 +33,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
-    <link rel="stylesheet" href="./range-firework/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- partial:index.partial.html -->
@@ -179,11 +179,11 @@
       </div>
     </div>
     <!-- partial -->
-    <script src="./range-firework/js/fscreen.js"></script>
-    <script src="./range-firework/js/Stage.js"></script>
-    <script src="./range-firework/js/MyMath.js"></script>
-    <script src="./range-firework/js/script.js"></script>
-    <script src="./range-firework/js/main.js"></script>
-    <script src="./range-firework/js/heart.js"></script>
+    <script src="./js/fscreen.js"></script>
+    <script src="./js/Stage.js"></script>
+    <script src="./js/MyMath.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/heart.js"></script>
   </body>
 </html>
