--- a/range-firework/index.html
+++ b/range-firework/index.html
@@ -158,11 +158,11 @@
                   document.writeln(
                     "COPYRIGHT&nbsp;&copy;&nbsp;2022 - " +
                       mydate.getFullYear() +
-                      '&nbsp;<a target="_blank" href="http://www.irange.top/">Range</a><br />ALL&nbsp;RIGHTS&nbsp;RESERVED'
+                      '&nbsp;<a target="_blank" href="https://ForeverRG.github.io">Range</a><br />ALL&nbsp;RIGHTS&nbsp;RESERVED'
                   );
                 </script>
                 <br />
-                最好的时间，最好的地点，最好的我遇到了最好的你......
+                有心栽花，无心插柳......
                 <br />
               </p>
             </div>
